ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: deck-ingress
  spec:
    rules:
    - host: test-oss.sjdc.opsmx.org
      http:
        paths:
        - backend:
            service:
              name: spin-deck
              port:
                number: 9000
          path: /
          pathType: ImplementationSpecific
  status:
    loadBalancer: {}
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: gate-ingress
  spec:
    rules:
    - host: test-ossgate.sjdc.opsmx.org
      http:
        paths:
        - backend:
            service:
              name: spin-gate
              port:
                number: 8084
          path: /
          pathType: ImplementationSpecific
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
